fix: add redirect URL to swagger
